--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,16 @@ body{
 
 header {
     background-color: #EC7E55;
-    height: 100px;
+    height: auto;
     color: azure;
     font-size: 120%;
-    line-height: 85px;
     text-align: center;
+    padding: 2px 0px 5px 0px;
 }
 
 h2{
     text-align: center;
-    width: 50%;
+    width: 30%;
     border: 1px solid chocolate;
     border-radius: 30px;
     margin-right: auto;
