--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 
 header {
     background-color: #EC7E55;
-    height: auto;
+    height: 10%;
     color: azure;
     font-size: 120%;
     text-align: center;
